Change background color in estilos.css

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,7 +11,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: #f1efe6;
+    background: #F8F3ED;
     font-family: Arial, sans-serif;
 }
 
