Change background color of body to #fcf8f4

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,7 +11,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: #FFFFFF;
+    background: #fcf8f4;
     font-family: Arial, sans-serif;
 }
 
